# Copyright 2023 The Tint Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/build.gni")
import("../../../scripts/tint_overrides_with_defaults.gni")

if (tint_build_interpreter) {
  assert(!build_with_chromium,
         "tint_build_interpreter cannot be used when building Chromium")

  source_set("libtint-interp") {
    sources = [
      "data_race_detector.cc",
      "data_race_detector.h",
      "interactive_debugger.cc",
      "interactive_debugger.h",
      "invocation.cc",
      "invocation.h",
      "memory.cc",
      "memory.h",
      "shader_executor.cc",
      "shader_executor.h",
      "uvec3.h",
      "workgroup.cc",
      "workgroup.h",
    ]

    include_dirs = [ "${tint_root_dir}/src/" ]

    deps = [
      "${tint_root_dir}/src/tint/api",
      "${tint_root_dir}/src/tint/lang/wgsl/ast",
      "${tint_root_dir}/src/tint/lang/wgsl/intrinsic",
      "${tint_root_dir}/src/tint/lang/wgsl/program",
      "${tint_spirv_tools_dir}/:spvtools_val",
    ]
  }

  executable("tint-interp-tests") {
    testonly = true

    sources = [
      "tests/data_race_detector_tests.cc",
      "tests/end2end_tests.cc",
      "tests/interactive_debugger_tests.cc",
      "tests/invocation_tests.cc",
      "tests/memory_tests.cc",
      "tests/shader_executor_tests.cc",
      "tests/test_main.cc",
    ]

    deps = [
      ":libtint-interp",
      "${tint_root_dir}/src/tint:gmock_and_gtest",
      "${tint_root_dir}/src/tint/lang/wgsl/ast",
      "${tint_spirv_tools_dir}/:spvtools_val",
    ]

    include_dirs = [ "${tint_root_dir}/src/" ]
  }
}
